              signatures and knot signatures.
        Class BitManipulator and related classes:
            - The class constants ...::specialised are now constexpr bools,
              not enum values.
        Class Bitmask, Bitmask1, Bitmask2:
            - Added compile-time constant fixedSize.
            - Added != to complement the already-existing == operator.
            - Bitmask now has a move constructor, move assignment, and
              member and global swap() functions.
        Class BitmaskLen8, BitmaskLen16, BitmaskLen32, BitmaskLen64:
            - Deprecated.  Just use Bitmask1<uint8_t>, etc.
        Class BlockedSFS, BlockedSFSLoop, BlockedSFSPair, BlockedSFSTriple:
            - Routines isBlockedSFS...() are now called recognise(), take their
              triangulation arguments by const reference (not pointer), and
              return a std::unique_ptr instead of a raw pointer.
              The old names are kept as deprecated aliases.
            - Added copy/move construction and copy/move assignment.
            - Added member and global swap() functions.
            - Changed BlockedSFS::isPluggedIBundle() to take no arguments,
              and instead return a std::optional<std::string>.
        Class BoolSet:
            - Almost everything in this class is now constexpr.
            - The class constants sNone, sTrue, sFalse, sBoth are deprecated.
              Just use BoolSet(), true, false, or BoolSet(true, true).
            - Most routines that took a (const BoolSet&) now just take a
              BoolSet by value.
            - New routines stringCode() and setStringCode().
            - Routine setByteCode() now detects invalid codes, and
              returns a boolean accordingly.
        Class BoundaryComponent<dim>:
            - Routines faces(), facets(), and the aliases vertices(), edges(),
              etc. no longer return a const reference to a std::vector, but